--- a/speech-recognition/requirements.txt
+++ b/speech-recognition/requirements.txt
@@ -6,6 +6,7 @@ jupyter
 scipy
 tensorflow-io
 tqdm
-pyaudio
 jupyter_contrib_nbextensions
 jupyter_nbextensions_configurator
+sounddevice
+samplerate
